<resources>
    <string name="app_name">Music Explorer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_settings">Settings</string>
    <string name="fui_progress_dialog_signing_up">Music Explorer</string>
    <string name="action_logout">Logout</string>
    <string name="action_search">Search</string>
    <string name="title_account">Account</string>
    <string name="title_home">Home</string>
    <string name="title_charts">Charts</string>
    <string name="title_fresh">Fresh</string>
    <string name="title_playlists">Playlists</string>
    <string name="title_forum">Forum</string>
    <string name="title_social">Social</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="default_notification_channel_id">ME_CH_01</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_image">Upload image</string>
    <string name="upload_image_2">Upload Image</string>
    <string name="title_default">Title</string>
    <string name="artist_default">Artist</string>
    <string name="genre_default">Genre</string>
    <string name="date_default">yyyy</string>
    <string name="default_album_title">Album title</string>
    <string name="default_author">Author</string>
    <string name="default_genre">Genre</string>
    <string name="default_rating">0.00</string>
    <string name="home_header_title">Last Reviews</string>
    <string name="title_activity_album">AlbumActivity</string>
    <string name="action_settings">Settings</string>
    <string name="add_content_tooltip">Add content to Music Explorer</string>
    <string name="artist_text_default">Artist name</string>
    <string name="year_default">YYYY</string>
    <string name="review_title_default">Review title</string>
    <string name="review_author_default">Review author</string>
    <string name="review_date_default">11/07/1995</string>
    <string name="like_button_text">Like</string>
    <string name="not_found_text">There is no review for this album yet!</string>
    <string name="new_review_button">Write a review</string>
    <string name="edit_review">Edit review</string>
    <string name="all_reviews_button">Read all reviews</string>
    <string name="review_by_text">Review by</string>
    <string name="message_cant_write_review">You already wrote a review for this album.</string>
    <string name="message_no_review_available">There is no other review for this album.</string>
    <string name="review_default_likes">0 likes</string>
    <string name="likes">likes</string>
    <string name="like">like</string>
    <string name="liked">liked</string>
    <string name="artist_name_default">Artist</string>
    <string name="birthdate_default">11/07/1995</string>
    <string name="artist_description_default">Description...</string>
    <string name="artist_genre_default">Genre</string>
    <string name="album_list">Albums</string>
    <string name="artist_album_title_default">Title</string>
    <string name="artist_album_date_default">Date</string>
    <string name="message_no_album_available">There is no album for this artist yet!</string>
    <string name="message_new_album">Add a new album</string>
    <string name="filter_title">Filters</string>
    <string name="genre_filter">Genre</string>
    <string name="year_filter">Year</string>
    <string name="votes_number_text_default">0 v.</string>
    <string name="all_years">All Time</string>
    <string name="all_genres">All Genres</string>
    <string name="fresh_header">New Releases</string>
    <string name="playlist1">Favorites</string>
    <string name="playlist2">To Listen</string>
    <string name="playlist3">On the Go</string>
    <string name="added_to">added to</string>
    <string name="choose_playlist">Add to a playlist</string>
    <string name="editing_instructions">Drag the albums to rearrange them.\nSwipe to delete them from the playlist.</string>
    <string name="empty_playlist">This playlist is empty!</string>
    <string name="message_no_review_for_this_user">This user didn\'t write any review.</string>
    <string name="chat_with_this_user">Start a chat with</string>
    <string name="add_content_title">Register new content here</string>
    <string name="new_image_icon_instructions">To upload the cover, tap the icon below! (6MB max)</string>
    <string name="new_button_submit">Submit!</string>
    <string name="new_album_name">Title</string>
    <string name="new_album_year">Year of release</string>
    <string name="new_album_artist">Artist</string>
    <string name="new_album_genre1">Genre 1</string>
    <string name="new_album_genre2">Genre 2 (optional)</string>
    <string name="new_album_genre3">Genre 3 (optional)</string>
    <string name="new_artist_name">Name</string>
    <string name="new_artist_year">Year of foundation</string>
    <string name="new_artist_story">Story (max 200 words)</string>
    <string name="new_artist_genre1">Genre 1</string>
    <string name="new_artist_genre2">Genre 2 (optional)</string>
    <string name="new_artist_genre3">Genre 3 (optional)</string>
    <string name="uploading_message">Uploading new content...</string>
    <string name="success_message">Content successfully uploaded!</string>
    <string name="submit_success">YAY!</string>
    <string name="submit_failure">Retry</string>
    <string name="change_image_instructions">Tap to change profile picture</string>
    <string name="username">Username:</string>
    <string name="go_to_user_page">Go to your user page</string>
    <string name="edit_profile">Edit your profile</string>
    <string name="submit_profile">Submit</string>
    <string name="new_review_title">Write your review!</string>
    <string name="new_review_subtitle">Tell us what you think of:</string>
    <string name="rating_title">Your rating:</string>
    <string name="headline_title">Write a catchy headline:</string>
    <string name="body_title">Now, your personal opinion:</string>
    <string name="submit_button">Send!</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_chat">Chats</string>
    <string name="like_nofication_message">liked yor review of</string>
    <string name="no_notifications_message">There is no notification yet.</string>
    <string name="chats_file_key">chats_file</string>
    <string name="chats_key">chats</string>
    <string name="last_message">Last message</string>
    <string name="unread_messages">unread messages</string>
    <string name="send_button">Send</string>
    <string name="chat_input_hint">Write a message...</string>
    <string name="generic_message">Message...</string>
    <string name="generic_time">11/07/2018 09:25</string>
    <string name="load_more_messages">Load more messages...</string>
    <string name="no_chats_message">There is no chat yet.</string>
    <string name="not_available">n/a</string>
    <string name="long_text">
        "Material is the metaphor.\nA material metaphor is the unifying theory of a rationalized space and a system of motion. The material is grounded in tactile reality, inspired by the study of paper and ink, yet technologically advanced and open to imagination and magic. Surfaces and edges of the material provide visual cues that are grounded in reality. The use of familiar tactile attributes helps users quickly understand affordances. Yet the flexibility of the material creates new affordances that supercede those in the physical world, without breaking the rules of physics. The fundamentals of light, surface, and movement are key to conveying how objects move, interact, and exist in space and in relation to each other. Realistic lighting shows seams, divides space, and indicates moving parts."
    </string>
    <string name="generic_user">Username</string>
    <string name="album_name_error">Please insert a valid Album Name!</string>
    <string name="album_date_error">Please insert a valid date!</string>
    <string name="album_artist_error">Please insert a valid artist!</string>
    <string name="genre_error">Please insert at least a valid genre!</string>
    <string name="album_picture_error">Please upload a picture!</string>
    <string name="album_noartist_error">Error: there is no such artist in our database</string>
    <string name="album_existing_error">Oops something went wrong! Album already exists </string>
    <string name="album_network_error">Network connection error: operation failed!</string>
    <string name="album_unknown_error">Unknown error: try again!</string>
    <string name="album_cover_error">Failed to uplaod the cover! Try again</string>
    <string name="artist_name_error">Please insert a valid Artist Name!</string>
    <string name="artist_date_error">Please insert a valid foundation date!</string>
    <string name="artist_story_error">Please insert a valid artist story!</string>
    <string name="artist_genre_error">Please insert at least a valid genre!</string>
    <string name="artist_picture_error">Please upload a picture!</string>
    <string name="artist_existing_error">Error: artist already exists in our database!</string>
    <string name="artist_cover_error">Failed to upload artist cover! Try again</string>
    <string name="artist_unknown_error">Some enexpected error occurred! Try again!</string>
    <string name="internal_error">Internal Error: check your internet connection!</string>
    <string name="genre1_error">Please insert a valid genre 1</string>
    <string name="genre2_error">Please insert a valid genre 2</string>
</resources>