<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.dima.emmeggi95.jaycaves.me.fragments.NewArtistFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/photoPickerButton2"
            android:layout_width="@dimen/album_cover_side"
            android:layout_height="@dimen/album_cover_side"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_account_circle_black_24dp"
            android:tint="@color/colorSecondaryLight"
            app:layout_constraintBottom_toBottomOf="@+id/newArtistPicture"
            app:layout_constraintEnd_toEndOf="@+id/newArtistPicture"
            app:layout_constraintStart_toStartOf="@+id/newArtistPicture"
            app:layout_constraintTop_toTopOf="@+id/newArtistPicture" />

        <ImageView
            android:id="@+id/newArtistPicture"
            android:layout_width="@dimen/album_cover_side"
            android:layout_height="@dimen/album_cover_side"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newArtistUplaodMessage"
            tools:srcCompat="@tools:sample/avatars" />


        <EditText
            android:id="@+id/newArtistReleaseDateInput"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="64dp"
            android:ems="10"
            android:hint="@string/new_artist_year"
            android:inputType="number"
            android:maxLength="4"
            android:textAppearance="@style/Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.307"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newArtistNameInput" />

        <EditText
            android:id="@+id/newArtistNameInput"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="64dp"
            android:ems="10"
            android:hint="@string/new_artist_name"
            android:inputType="text"
            android:textAppearance="@style/Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.379"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/newArtistGenreInput1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:ems="10"
            android:hint="@string/new_artist_genre1"
            android:inputType="text"
            android:textAppearance="@style/Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newArtistStory" />

        <AutoCompleteTextView
            android:id="@+id/newArtistGenreInput2"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="64dp"
            android:ems="10"
            android:hint="@string/new_artist_genre2"
            android:inputType="text"
            android:textAppearance="@style/Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newArtistGenreInput1" />

        <AutoCompleteTextView
            android:id="@+id/newArtistGenreInput3"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="64dp"
            android:ems="10"
            android:hint="@string/new_artist_genre3"
            android:inputType="text"
            android:textAppearance="@style/Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.306"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newArtistGenreInput2" />

        <TextView
            android:id="@+id/newArtistUplaodMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/new_image_icon_instructions"
            android:textAppearance="@style/Body2"
            app:layout_constraintEnd_toEndOf="@+id/newArtistGenreInput3"
            app:layout_constraintStart_toStartOf="@+id/newArtistGenreInput3"
            app:layout_constraintTop_toBottomOf="@+id/newArtistGenreInput3" />

        <EditText
            android:id="@+id/newArtistStory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="64dp"
            android:ems="10"
            android:hint="@string/new_artist_story"
            android:inputType="textMultiLine"
            android:maxLength="200"
            android:textAppearance="@style/Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newArtistReleaseDateInput" />

        <TextView
            android:id="@+id/createNewArtistButton"
            style="@style/Link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/new_button_submit"
            android:textAppearance="@style/H5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newArtistPicture" />


    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>