<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/featured_review_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/review_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_title_default"
        android:textAppearance="@style/HeaderTextTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/stars_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_title">

        <ImageView
            android:id="@+id/star_1"
            android:layout_width="@dimen/star_dimension"
            android:layout_height="@dimen/star_dimension"
            android:layout_weight="1"
            android:src="@drawable/ic_star_border_24dp"
            android:tint="@color/star_color" />

        <ImageView
            android:id="@+id/star_2"
            android:layout_width="@dimen/star_dimension"
            android:layout_height="@dimen/star_dimension"
            android:layout_weight="1"
            android:src="@drawable/ic_star_border_24dp"
            android:tint="@color/star_color" />

        <ImageView
            android:id="@+id/star_3"
            android:layout_width="@dimen/star_dimension"
            android:layout_height="@dimen/star_dimension"
            android:layout_weight="1"
            android:src="@drawable/ic_star_border_24dp"
            android:tint="@color/star_color" />

        <ImageView
            android:id="@+id/star_4"
            android:layout_width="@dimen/star_dimension"
            android:layout_height="@dimen/star_dimension"
            android:layout_weight="1"
            android:src="@drawable/ic_star_border_24dp"
            android:tint="@color/star_color" />

        <ImageView
            android:id="@+id/star"
            android:layout_width="@dimen/star_dimension"
            android:layout_height="@dimen/star_dimension"
            android:layout_weight="1"
            android:src="@drawable/ic_star_border_24dp"
            android:tint="@color/star_color" />

    </LinearLayout>

    <TextView
        android:id="@+id/review_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/review_date_default"
        android:textAppearance="@style/LittleTextTheme"
        app:layout_constraintBottom_toTopOf="@+id/review_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/stars_container" />

    <TextView
        android:id="@+id/review_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_margin"
        android:text="@string/long_text"
        android:textAlignment="textStart"
        android:textAppearance="@style/SecondaryTextTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stars_container" />

    <TextView
        android:id="@+id/review_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_by_text"
        android:textAppearance="@style/LittleTextTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_body" />

    <TextView
        android:id="@+id/review_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generic_user"
        android:textAppearance="@style/LinkTextTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_by" />

    <ImageView
        android:id="@+id/heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_body"
        app:srcCompat="@drawable/ic_favorite_border_black_24dp" />

    <TextView
        android:id="@+id/likes_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/review_default_likes"
        android:textAppearance="@style/LittleTextTheme"
        app:layout_constraintBottom_toBottomOf="@+id/heart"
        app:layout_constraintEnd_toStartOf="@+id/heart"
        app:layout_constraintTop_toBottomOf="@+id/review_body" />
</android.support.constraint.ConstraintLayout>