<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dima.emmeggi95.jaycaves.me.ArtistActivity"
    tools:showIn="@layout/activity_artist">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/birthday_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/birthdate_default" />

        <TextView
            android:id="@+id/genre1_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/artist_genre_default" />

        <TextView
            android:id="@+id/genre2_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/artist_genre_default"
            android:visibility="gone" />

        <TextView
            android:id="@+id/genre3_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/artist_genre_default"
            android:visibility="gone" />

        <TextView
            android:id="@+id/artist_description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artist_description_default" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/artist_albums_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
